--- a/ProjectDiamondShop/Views/Manager/Index.cshtml
+++ b/ProjectDiamondShop/Views/Manager/Index.cshtml
@@ -106,6 +106,7 @@
                                 <th class="wide-column">Status</th>
                                 <th>Address</th>
                                 <th>Phone</th>
+                                <th>Note</th>
                                 <th>Sale Date</th>
                             </tr>
                         </thead>
@@ -148,6 +149,7 @@
                                     </td>
                                     <td>@order.address</td>
                                     <td>@order.phone</td>
+                                    <td>@order.Note</td>
                                     <td>@order.saleDate</td>
                                 </tr>
                             }
