--- a/ProjectDiamondShop/Views/SaleStaff/SaleStaff.cshtml
+++ b/ProjectDiamondShop/Views/SaleStaff/SaleStaff.cshtml
@@ -259,6 +259,7 @@
                                 <th class="wide-column">Delivery Staff</th>
                                 <th class="wide-column">Total Money</th>
                                 <th class="wide-column">Status</th>
+                                <th class="wide-column">Note</th>
                                 <th class="wide-column">Actions</th>
                             </tr>
                         </thead>
@@ -271,6 +272,8 @@
                                     <td>@order.deliveryStaffName</td>
                                     <td>$@String.Format("{0:N0}", order.totalMoney)</td>
                                     <td>@order.status</td>
+                                    <td>@order.Note</td>
+
                                     <td>
                                         <form action="@Url.Action("Process", "SaleStaff")" method="post" style="display:inline;">
                                             @Html.AntiForgeryToken()
