sua loi lan cuoi

--- a/ProjectDiamondShop/Views/Warranty/WarrantyDetails.cshtml
+++ b/ProjectDiamondShop/Views/Warranty/WarrantyDetails.cshtml
@@ -105,7 +105,7 @@
                         <a class="nav-link" href="@Url.Action("About", "Home")">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Contact", "Home")">Contact Us</a>
+                        <a class="nav-link" href="https://www.facebook.com/profile.php?id=61561345894731" target="_blank">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Index", "Diamonds")">Shop</a>
