--- a/ProjectDiamondShop/Views/Warranty/ViewWarranty.cshtml
+++ b/ProjectDiamondShop/Views/Warranty/ViewWarranty.cshtml
@@ -13,12 +13,12 @@
     <p><strong>Warranty End Date:</strong> @Model.WarrantyEndDate</p>
     <p><strong>Warranty Details:</strong> @Model.WarrantyDetails</p>
     <p><strong>Diamond Name:</strong> @Model.DiamondName</p>
-    <p><strong>Diamond Price:</strong> @Model.DiamondPrice</p>
+    <p><strong>Diamond Price:</strong> $@String.Format("{0:N0}", Model.DiamondPrice)</p>
     <p>Image Path:<img src="@Model.ImagePath.Split('|')[0]" alt="Product Image" /></p>
     <p><strong>Setting Name:</strong> @Model.SettingName</p>
-    <p><strong>Setting Price:</strong> @Model.SettingPrice</p>
+    <p><strong>Setting Price:</strong> $@String.Format("{0:N0}", Model.SettingPrice)</p>
     <p><strong>Accent Stone Name:</strong> @Model.AccentStoneName</p>
-    <p><strong>Accent Stone Price:</strong> @Model.AccentStonePrice</p>
+    <p><strong>Accent Stone Price:</strong> $@String.Format("{0:N0}", Model.AccentStonePrice)</p>
     <p><strong>Accent Stone Quantity:</strong> @Model.AccentStoneQuantity</p>
     <p><strong>Full Name:</strong> @Model.FullName</p>
     <p><strong>Customer Name:</strong> @Model.CustomerName</p>
